[Fix #5] Correction of the Generic RecyclerView Layout Adapter ViewType handling logic. [New] Addition of a new carousel item with a single text sample. [Support] Minor code refactoring.

--- a/gmlrva-sample/src/main/res/values/dimens.xml
+++ b/gmlrva-sample/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
 
     <!-- Generic Text Dimensions -->
     <dimen name="gmlrva_text_size_16">16sp</dimen>
+    <dimen name="gmlrva_text_size_21">21sp</dimen>
 </resources>
