[Support] Changes to the RecyclerView Generic Item Decoration implementation. [Known Issue] Unfinished logic and abstraction of the RecyclerView Generic Item Decoration implementation.

--- a/gmlrva-sample/src/main/res/drawable/gmlrva_red_line_item_divider.xml
+++ b/gmlrva-sample/src/main/res/drawable/gmlrva_red_line_item_divider.xml
@@ -4,9 +4,15 @@
     android:shape="rectangle">
 
     <size
-        android:height="1dp" />
+        android:height="10dp" />
 
     <solid
         android:color="#ff992900" />
+
+    <stroke
+        android:color="#ffffb700"
+        android:dashWidth="5px"
+        android:dashGap="5px"
+        android:width="5dp"/>
 
 </shape>
